# flowex

./: .gitignore  DOCUMENTATION.md  go.mod  go.sum
binance/: client.go  ws.go
bitget/: client.go  ws.go
bybit/: client.go  ws.go
candles/: fetcher_binance.go  fetcher_bitget.go  fetcher_bybit.go
capi/: Makefile  build.ps1  candles.go  capi.go  indicators.go  manager.go
depth/: store.go
examples/basic/: main.go
models/: candle.go  trade.go
rust/: Cargo.toml
rust/flowex/: Cargo.toml
rust/flowex-sys/: Cargo.toml
rust/flowex-sys/src/: lib.rs
rust/flowex/examples/: smoke.rs
rust/flowex/src/: lib.rs  types.rs
ws/: manager.go  worker.go  worker_seed_test.go
