[workspace]
resolver = "2"
members = ["flowex-sys", "flowex"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KhavrTrading/flowex"

[workspace.dependencies]
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
