[package]
name = "flowex"
description = "Safe Rust bindings to the flowex shared library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flowex-sys = { path = "../flowex-sys", version = "0.1.0" }
libloading = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
